--- a/src/languages/CA.json
+++ b/src/languages/CA.json
@@ -248,5 +248,15 @@
     "working hours, and whether there is charge for extra hour(s);": "working hours, and whether there is charge for extra hour(s);",
     "working areas (which city/cities);": "接受哪些地区的任务；",
     "other services available, such as vehicle, airport pick-up/deliver, and etc., and the charges accordingly;": "other services available, such as vehicle, airport pick-up/deliver, and etc., and the charges accordingly;",
-    "other remarks, please sepcify.": "other remarks, please sepcify."
+    "other remarks, please sepcify.": "other remarks, please sepcify.",
+    "Area of expertise": "Area of expertise",
+    "Language Level": "Language Level",
+    "Comments Count": "Comments",
+    "No Comments Submitted yet": "No Comments Submitted yet",
+    "Upload at Least One Photo": "Upload at Least One Photo",
+    "Pls. Enter description here": "Pls. Enter description here",
+    "Submit to Authentication": "Confirm to Upload",
+    "Information Authentication will be finish in two day": "Authentication will be finished in two days",
+    "Not Create,Back": "No. Go Back",
+    "Create": "Create"
 }
