--- a/src/languages/CN.json
+++ b/src/languages/CN.json
@@ -264,10 +264,20 @@
     "working areas (which city/cities);": "接受哪些地区的任务；",
     "other services available, such as vehicle, airport pick-up/deliver, and etc., and the charges accordingly;": "是否提供如包车、接机等其他服务，以及其他服务的额外收费；",
     "other remarks, please sepcify.": "其他特别提示，也请注明。",
-    "Authentication":"审核认证",
-    "Settlement":"结算问题",
-    "Events":"市场活动",
-    "Any questions, suggestions, or problems can be input here, we will get back to you soon!":"有任何疑问及建议请提出，我们将会尽快处理!",
-    "Please contact us for any advertisement enquiry or quotation.":"广告业务查询及报价，请与我们联系。",
-    "Please briefly describe your business and advertisement needs here. We will get back to you soon.":"请简单描述您的业务和广告需要，我们的工作人员会尽快与您联系。"
+    "Authentication": "审核认证",
+    "Settlement": "结算问题",
+    "Events": "市场活动",
+    "Any questions, suggestions, or problems can be input here, we will get back to you soon!": "有任何疑问及建议请提出，我们将会尽快处理!",
+    "Please contact us for any advertisement enquiry or quotation.": "广告业务查询及报价，请与我们联系。",
+    "Please briefly describe your business and advertisement needs here. We will get back to you soon.": "请简单描述您的业务和广告需要，我们的工作人员会尽快与您联系。",
+    "Area of expertise": "擅长领域",
+    "Language Level": "语言水平",
+    "Comments Count": "条评价",
+    "No Comments Submitted yet": "还未填写评价内容哦",
+    "Upload at Least One Photo": "至少上传一张照片",
+    "Pls. Enter description here": "请输入描述",
+    "Submit to Authentication": "确认上传",
+    "Information Authentication will be finish in two day": "认证信息将会于两天内完成",
+    "Not Create,Back": "不。返回",
+    "Create": "创建"
 }
