--- a/www/languages/JP.json
+++ b/www/languages/JP.json
@@ -253,5 +253,24 @@
     "Audit pass, transfer": "申請承認/取引中",
     "Withdrawal Time": "お引き出し時間",
     "Edit": "編集",
-    "Close": "閉鎖"
+    "Close": "閉鎖",
+    "Important Notice": "※注意書き",
+    "UE Lives provides this platform to facilitate transaction, but we are not a local service provider and do not provide local services. Users should select services wisely. UE Lives is not responsible for any lost. If there is any charge for non-voluntary activities or shopping, please report to us.": "UE Livesは通訳者と旅行者を繋げるプラットフォームを提供するサービスです。具体的なサービスについては各自が良く考慮してお選び下さい。弊社は一切の責任を負いかねます。ご理解下さい。万が一、プラン説明には明示されていない活動を強要された場合は速やかに弊社までお知らせ下さい。",
+    "Please describe the task details, schedule, and requirements. If there is any request for other service (e.g. airport pick-up or vehicle), please specify.Note: any fee caused by other services and any additional fees(e.g.tickets for resorts, or intra - city transportation, etc.) are not included in the interpretering fee,and should be paid by the task owner.Please negotiate details with the interpreter after the task is confirmed.": "タスクの詳細について紹介して下さい（行程や持ち物、その他の必要事項）※注意：通訳以外のタスク中に生じた支出は全て自己負担となります。例）入場料、交通費等",
+    "Please introduce yourself briefly, e.g. your skills and speciality, to let others know more about you.": "簡単に自分を紹介して下さい（趣味、特技等）",
+    "Kindly describe": "也请描述下",
+    "working hours, and whether there is charge for extra hour(s);": "毎日の稼働可能時間、延長料金の有無",
+    "working areas (which city/cities);": "稼働可能区域",
+    "other services available, such as vehicle, airport pick-up/deliver, and etc., and the charges accordingly;": "空港出迎えなどその他のサービスの有無とそれらの料金プラン",
+    "other remarks, please sepcify.": "その他特記事項",
+    "Area of expertise": "専門知識の分野",
+    "Language Level": "言語レベル",
+    "Comments Count": "条の評価",
+    "No Comments Submitted yet": "まだコメントはありません",
+    "Upload at Least One Photo": "少なくとも1つの写真をアップロードする",
+    "Pls. Enter description here": "説明を入力してください",
+    "Submit to Authentication": "確認をアップロード",
+    "Information Authentication will be finish in two day": "認証情報は2日以内に完了します",
+    "Not Create,Back": "いいえ。戻る",
+    "Create": "創建"
 }
