--- a/src/languages/CN.json
+++ b/src/languages/CN.json
@@ -77,7 +77,7 @@
     "Submit": "申请提现",
     "Withdraw Record": "提现记录",
     "Withdraw Notice:Dear XXX, your application has been approved. Pls. contact your bank for transaction details if necessary.Status: Approved. Transaction Completed.": "提现提醒:xxx你好，你的账号申请的提现已经通过审核，具体到账时间以银行到账时间为准。状态：审核通过，已转账",
-    "Enter Search Keywords, Language/Place/Price/Type": "请输入搜索关键字，语言/地点/价格/类型",
+    "Enter Search Keywords, Language/Place/Price/Type": "请输入搜索关键字",
     "Language": "语言",
     "Place": "地区",
     "Popular Cities": "热门城市",
@@ -253,6 +253,7 @@
     "Status": "状态",
     "Audit pass, transfer": "审核通过，已转账",
     "Withdrawal Time": "提现时间",
+    "cash Time": "提现时间",
     "Edit": "编辑",
     "Close": "关闭",
     "Important Notice": "敬请留意",
