--- a/src/languages/JP.json
+++ b/src/languages/JP.json
@@ -77,7 +77,7 @@
     "Submit": "申請する",
     "Withdraw Record": "お引き出し履歴",
     "Withdraw Notice:Dear XXX, your application has been approved. Pls. contact your bank for transaction details if necessary.Status: Approved. Transaction Completed.": "お引き出し通知:あなたのお引き出し申請は承認されました。取引に関する詳しい情報は銀行に直接お問い合わせ下さい現状：申請承認/取引中",
-    "Enter Search Keywords, Language/Place/Price/Type": "キーワード検索、言語/場所/価格/形式",
+    "Enter Search Keywords, Language/Place/Price/Type": "キーワード検索",
     "Language": "言語",
     "Place": "地域",
     "Popular Cities": "人気都市",
@@ -252,6 +252,7 @@
     "Status": "現状",
     "Audit pass, transfer": "申請承認/取引中",
     "Withdrawal Time": "お引き出し時間",
+    "cash Time": "お引き出し時間",
     "Edit": "編集",
     "Close": "閉鎖",
     "Important Notice": "※注意書き",
