--- a/src/languages/KR.json
+++ b/src/languages/KR.json
@@ -77,7 +77,7 @@
     "Submit": "제출",
     "Withdraw Record": "출금기록",
     "Withdraw Notice:Dear XXX, your application has been approved. Pls. contact your bank for transaction details if necessary.Status: Approved. Transaction Completed.": "출금 통지        xxx님에게, 회원님의 요청이 승인되었습니다. 세부사항은 은행에게 직접 문의하세요.           상태: 승인. 거래완료",
-    "Enter Search Keywords, Language/Place/Price/Type": "키워드 입력, 언어/장소/가격/종류",
+    "Enter Search Keywords, Language/Place/Price/Type": "키워드 입력",
     "Language": "언어",
     "Place": "현재 주소",
     "Popular Cities": "핫플레이스",
@@ -252,6 +252,7 @@
     "Status": "상태",
     "Audit pass, transfer": "승인. 거래완료",
     "Withdrawal Time": "출금시간",
+    "cash Time": "출금시간",
     "Edit": "수정",
     "Close": "닫기",
     "Important Notice": "주의사항",
