--- a/www/languages/CA.json
+++ b/www/languages/CA.json
@@ -77,7 +77,7 @@
     "Submit": "Submit",
     "Withdraw Record": "Withdraw Record",
     "Withdraw Notice:Dear XXX, your application has been approved. Pls. contact your bank for transaction details if necessary.Status: Approved. Transaction Completed.": "Withdraw Notice:Dear XXX, your application has been approved. Pls. contact your bank for transaction details if necessary.Status: Approved. Transaction Completed.",
-    "Enter Search Keywords, Language/Place/Price/Type": "Enter Search Keywords, Language/Place/Price/Type",
+    "Enter Search Keywords, Language/Place/Price/Type": "Enter Search Keywords",
     "Language": "Language",
     "Place": "Place",
     "Popular Cities": "Popular Cities",
@@ -238,6 +238,7 @@
     "Status": "Status",
     "Audit pass, transfer": "Approved. Transaction Completed",
     "Withdrawal Time": "Withdrawal Time",
+    "cash Time": "Withdrawal Time",
     "Edit": "Edit",
     "Close": "Close",
     "Important Notice": "Important Notice",
