add weibo login

--- a/src/languages/CA.json
+++ b/src/languages/CA.json
@@ -259,5 +259,9 @@
     "Submit to Authentication": "Confirm to Upload",
     "Information Authentication will be finish in two day": "Authentication will be finished in two days",
     "Not Create,Back": "No. Go Back",
-    "Create": "Create"
+    "Create": "Create",
+    "age":"age",
+    "age":"age",
+    "Private":"Private",
+    "Date of Birth":"Date of Birth"
 }
