--- a/src/languages/CN.json
+++ b/src/languages/CN.json
@@ -281,22 +281,26 @@
     "Information Authentication will be finish in two day": "认证信息将会于两天内完成",
     "Not Create,Back": "不。返回",
     "Create": "创建",
-    "age":"年龄",
-    "Public":"公开",
-    "Private":"非公开",
-    "Date of Birth":"出生日期",
-    "Please Set Transaction Password First":"请先设置交易密码",
-    "Based on Local Time":"任务时间以任务地点时间计算",
-    "Please Note:":"敬请注意：",
-    "After registering as a translator, you can accept tasks. Once a task is confirmed, the task owner would make a payment to us in advance. Three working days after the task is completed, the task fee will be exchanged into your local currency and transferred into your 'Wallet'. Money can be withdrawed from 'My Wallet' afterwards. Our platform charges 10% of the total fee as service fee. The exchange rate varies based on real market rates in a certain period.":"成为翻译后，您可以接受翻译任务。任务确认时，任务发布人需预付，相应款项由本平台代收；任务顺利完成后的三个工作日后，该款项会自动兑换为您当地的货币并转入您的钱包中。随后您可以从钱包余额中提现。平台收取任务总金额的10%作为手续费，系统汇率根据一段时间内的实际汇率厘定。",
-    "Registerring as a translator means that you accepted the arrangement above. Please obey the local law and regulation.":"成为翻译代表您已接受我们的以上安排，敬请遵守当地法律法规。",
-    "UE Lives provides an opportunity for your to leverage your language skills and meet new friends, and we are trying best to maintain a safe and reliable trading environment, which also relies on your support and participation.":"悠译希望为您创造增加收入和结识外国好友的机会，也努力为双方提供安全诚信的交易环境，这有赖于您的支持和参与。",
-    "Task below this service charge won't be referred to you. Any task invitation will not be  lower than this daily wage.":"低于此日薪的任务将不会向您推送，他人向您提出的任务申请也不能低于此标准日薪。",
-    "Task fee will be exchanged into your local currency and transferred into your 'Wallet', while the exchange rate varies based on real market rates in a certain period. Our platform charges 10% of the total fee as service fee.":"任务款项款项会兑换为您当地的货币并转入您的钱包中，系统汇率根据一段时间内的实际汇率厘定。平台收取任务总金额的10%作为手续费 。",
-    "The exchange rate varies based on real market rates in a certain period.":"系统汇率根据一段时间内的实际汇率厘定。",
-    "Transaction Records":"交易记录",
-    "Received":"收到",
-    "paid":"支付",
-    "Total":"总额",
-    "xx of the total price is chareged as service fee.":"总金额的{{value}}为手续费"
+    "age": "年龄",
+    "Public": "公开",
+    "Private": "非公开",
+    "Date of Birth": "出生日期",
+    "Please Set Transaction Password First": "请先设置交易密码",
+    "Based on Local Time": "任务时间以任务地点时间计算",
+    "Please Note:": "敬请注意：",
+    "After registering as a translator, you can accept tasks. Once a task is confirmed, the task owner would make a payment to us in advance. Three working days after the task is completed, the task fee will be exchanged into your local currency and transferred into your 'Wallet'. Money can be withdrawed from 'My Wallet' afterwards. Our platform charges 10% of the total fee as service fee. The exchange rate varies based on real market rates in a certain period.": "成为翻译后，您可以接受翻译任务。任务确认时，任务发布人需预付，相应款项由本平台代收；任务顺利完成后的三个工作日后，该款项会自动兑换为您当地的货币并转入您的钱包中。随后您可以从钱包余额中提现。平台收取任务总金额的10%作为手续费，系统汇率根据一段时间内的实际汇率厘定。",
+    "Registerring as a translator means that you accepted the arrangement above. Please obey the local law and regulation.": "成为翻译代表您已接受我们的以上安排，敬请遵守当地法律法规。",
+    "UE Lives provides an opportunity for your to leverage your language skills and meet new friends, and we are trying best to maintain a safe and reliable trading environment, which also relies on your support and participation.": "悠译希望为您创造增加收入和结识外国好友的机会，也努力为双方提供安全诚信的交易环境，这有赖于您的支持和参与。",
+    "Task below this service charge won't be referred to you. Any task invitation will not be  lower than this daily wage.": "低于此日薪的任务将不会向您推送，他人向您提出的任务申请也不能低于此标准日薪。",
+    "Task fee will be exchanged into your local currency and transferred into your 'Wallet', while the exchange rate varies based on real market rates in a certain period. Our platform charges 10% of the total fee as service fee.": "任务款项款项会兑换为您当地的货币并转入您的钱包中，系统汇率根据一段时间内的实际汇率厘定。平台收取任务总金额的10%作为手续费 。",
+    "The exchange rate varies based on real market rates in a certain period.": "系统汇率根据一段时间内的实际汇率厘定。",
+    "Transaction Records": "交易记录",
+    "Received": "收到",
+    "paid": "支付",
+    "Total": "总额",
+    "xx of the total price is chareged as service fee.": "总金额的{{value}}为手续费",
+    "Personal ID Verification Passed": "已通过个人信息实名认证",
+    "Leave": "暂时离开",
+    "Continue": "继续填写",
+    "You haven't Set Transaction Password. Go Set?":"交易密码为空，是否需要去完善"
 }
