--- a/src/languages/KR.json
+++ b/src/languages/KR.json
@@ -293,5 +293,7 @@
     "Personal ID Verification Passed":"실명인증승인",
     "Leave": "떠나다",
     "Continue": "계속 써",
-    "You haven't Set Transaction Password. Go Set?":"거래하신 비번이 비어있습니다.개선 하시겠습니까"
+    "You haven't Set Transaction Password. Go Set?":"거래하신 비번이 비어있습니다.개선 하시겠습니까",
+    "Please Install UE Lives APP to Enjoy All Functions":"다운로드 UE Lives APP, 전체 기능 사용.",
+    "Contact Number":"연락처"
 }
