--- a/www/languages/CA.json
+++ b/www/languages/CA.json
@@ -281,5 +281,7 @@
     "Personal ID Verification Passed":"Personal ID Verification Passed",
     "Leave": "Leave",
     "Continue": "Continue",
-    "You haven't Set Transaction Password. Go Set?":"You haven't Set Transaction Password. Go Set?"
+    "You haven't Set Transaction Password. Go Set?":"You haven't Set Transaction Password. Go Set?",
+    "Please Install UE Lives APP to Enjoy All Functions":"Please Install UE Lives APP to Enjoy All Functions",
+    "Contact Number":"Contact Number"
 }
