--- a/src/languages/CA.json
+++ b/src/languages/CA.json
@@ -283,5 +283,9 @@
     "Continue": "Continue",
     "You haven't Set Transaction Password. Go Set?":"You haven't Set Transaction Password. Go Set?",
     "Please Install UE Lives APP to Enjoy All Functions":"Please Install UE Lives APP to Enjoy All Functions",
-    "Contact Number":"Contact Number"
+    "Contact Number":"Contact Number",
+    "Enter Your Nickname":"Enter Your Nickname",
+    "Enter Your Real Name":"Enter Your Real Name",
+    "Enter the Industry in Which You are Working":"Enter the Industry in Which You are Working",
+    "Select Your Region":"Select Your Region"
 }
