--- a/src/languages/CN.json
+++ b/src/languages/CN.json
@@ -304,5 +304,10 @@
     "Continue": "继续填写",
     "You haven't Set Transaction Password. Go Set?":"交易密码为空，是否需要去完善",
     "Please Install UE Lives APP to Enjoy All Functions":"请下载悠译APP以使用完整的功能",
-    "Contact Number":"联系电话"
+    "Contact Number":"联系电话",
+    "Enter Your Nickname":"请输入昵称",
+    "Enter Your Real Name":"请输入真实姓名",
+    "Enter the Industry in Which You are Working":"请输入行业",
+    "Select Your Region":"请选择区域",
+    "Enter Your Mobile No. or Email":"请输入您的手机或邮箱"
 }
