--- a/src/languages/CN.json
+++ b/src/languages/CN.json
@@ -150,7 +150,7 @@
     "Upload Photos": "上传图片证据",
     "Followed by XXX": "已有{{value}}人关注",
     "Number of Tasks Completed": "任务完成数量",
-    "Completion Rate": "任务完成率",
+    "Completion Rate": "好评率",
     "Apply": "提出申请",
     "Pending": "正在申请",
     "Accepted": "已被接受",
