--- a/src/languages/JP.json
+++ b/src/languages/JP.json
@@ -150,7 +150,7 @@
     "Upload Photos": "写真をアップロード",
     "Followed by XXX": "フォロワー{{value}}",
     "Number of Tasks Completed": "達成仕事件数",
-    "Completion Rate": "仕事達成率",
+    "Completion Rate": "好評率",
     "Apply": "申請する",
     "Pending": "申請中",
     "Accepted": "承認されました",
