--- a/src/languages/KR.json
+++ b/src/languages/KR.json
@@ -150,7 +150,7 @@
     "Upload Photos": "사진 올리기",
     "Followed by XXX": "{{value}}님이 팔로우를 했습니다",
     "Number of Tasks Completed": "작업 완료한 개수",
-    "Completion Rate": "작업 효율성",
+    "Completion Rate": "호평 속도",
     "Apply": "신청",
     "Pending": "처리중",
     "Accepted": "수락",
