--- a/src/languages/CN.json
+++ b/src/languages/CN.json
@@ -295,8 +295,8 @@
     "Task fee will be exchanged into your local currency and transferred into your 'Wallet', while the exchange rate varies based on real market rates in a certain period. Our platform charges 10% of the total fee as service fee.": "任务款项款项会兑换为您当地的货币并转入您的钱包中，系统汇率根据一段时间内的实际汇率厘定。平台收取任务总金额的10%作为手续费 。",
     "The exchange rate varies based on real market rates in a certain period.": "系统汇率根据一段时间内的实际汇率厘定。",
     "Transaction Records": "交易记录",
-    "Received": "收到",
-    "paid": "支付",
+    "Received": "收款",
+    "paid": "付款",
     "Total": "总额",
     "xx of the total price is chareged as service fee.": "总金额的{{value}}为手续费",
     "Personal ID Verification Passed": "已通过个人信息实名认证",
