--- a/www/languages/JP.json
+++ b/www/languages/JP.json
@@ -274,33 +274,34 @@
     "Information Authentication will be finish in two day": "認証情報は2日以内に完了します",
     "Not Create,Back": "いいえ。戻る",
     "Create": "創建",
-    "age":"年齢",
-    "age":"公開する",
-    "Private":"公開しない",
-    "Date of Birth":"誕生日",
-    "Please Set Transaction Password First":"まず取引のパスワードを設定",
-    "Based on Local Time":"現地時間で表示します",
-    "Please Note:":"ご注意！",
-    "After registering as a translator, you can accept tasks. Once a task is confirmed, the task owner would make a payment to us in advance. Three working days after the task is completed, the task fee will be exchanged into your local currency and transferred into your 'Wallet'. Money can be withdrawed from 'My Wallet' afterwards. Our platform charges 10% of the total fee as service fee. The exchange rate varies based on real market rates in a certain period.":"通訳者になった後に仕事の依頼を受諾できます。仕事の依頼が確認される際、依頼側からの給料をあらかじめにお預かりさせていただきます。仕事が無事に終わって三日間内に、給料は自動的に現地の貨幣に為替して、ウォレットに振り込みさせていただきます。ウォレットから引き出すことができます。手数料は取引金額の10％です。システムの為替レートが一定時間帯の実際の為替レートによって調整して規定されます",
-    "Registerring as a translator means that you accepted the arrangement above. Please obey the local law and regulation.":"通訳者になったのは、以上のことを同意することになったと、ご了承ください。現地の法律を遵守してください。",
-    "UE Lives provides an opportunity for your to leverage your language skills and meet new friends, and we are trying best to maintain a safe and reliable trading environment, which also relies on your support and participation.":"悠訳をご利用してありがとうございます。安全に利用できるようにご協力を願います。",
-    "Task below this service charge won't be referred to you. Any task invitation will not be  lower than this daily wage.":"この日給以下の仕事の依頼がプッシュしないようにします。あなた宛の依頼は日給標準以下になりません。",
-    "Task fee will be exchanged into your local currency and transferred into your 'Wallet', while the exchange rate varies based on real market rates in a certain period. Our platform charges 10% of the total fee as service fee.":"仕事の給料は自動的に現地の貨幣に為替して、ウォレットに振り込みさせていただきます。ウォレットから引き出すことができます。システムの為替レートが一定時間帯の実際の為替レートによって調整して規定されます。手数料は取引金額の10％です。" ,
-    "The exchange rate varies based on real market rates in a certain period.":"システムの為替レートが一定時間帯の実際の為替レートによって調整して規定されます。",
-    "Transaction Records":"取引記録",
-    "Received":"受け取る",
-    "paid":"支払う",
-    "Total":"合計",
-    "xx of the total price is chareged as service fee.":"取引金額の{{value}}の手数料",
-    "Personal ID Verification Passed":"ID認証審査に合格",
+    "age": "年齢",
+    "age": "公開する",
+    "Private": "公開しない",
+    "Date of Birth": "誕生日",
+    "Please Set Transaction Password First": "まず取引のパスワードを設定",
+    "Based on Local Time": "現地時間で表示します",
+    "Please Note:": "ご注意！",
+    "After registering as a translator, you can accept tasks. Once a task is confirmed, the task owner would make a payment to us in advance. Three working days after the task is completed, the task fee will be exchanged into your local currency and transferred into your 'Wallet'. Money can be withdrawed from 'My Wallet' afterwards. Our platform charges 10% of the total fee as service fee. The exchange rate varies based on real market rates in a certain period.": "通訳者になった後に仕事の依頼を受諾できます。仕事の依頼が確認される際、依頼側からの給料をあらかじめにお預かりさせていただきます。仕事が無事に終わって三日間内に、給料は自動的に現地の貨幣に為替して、ウォレットに振り込みさせていただきます。ウォレットから引き出すことができます。手数料は取引金額の10％です。システムの為替レートが一定時間帯の実際の為替レートによって調整して規定されます",
+    "Registerring as a translator means that you accepted the arrangement above. Please obey the local law and regulation.": "通訳者になったのは、以上のことを同意することになったと、ご了承ください。現地の法律を遵守してください。",
+    "UE Lives provides an opportunity for your to leverage your language skills and meet new friends, and we are trying best to maintain a safe and reliable trading environment, which also relies on your support and participation.": "悠訳をご利用してありがとうございます。安全に利用できるようにご協力を願います。",
+    "Task below this service charge won't be referred to you. Any task invitation will not be  lower than this daily wage.": "この日給以下の仕事の依頼がプッシュしないようにします。あなた宛の依頼は日給標準以下になりません。",
+    "Task fee will be exchanged into your local currency and transferred into your 'Wallet', while the exchange rate varies based on real market rates in a certain period. Our platform charges 10% of the total fee as service fee.": "仕事の給料は自動的に現地の貨幣に為替して、ウォレットに振り込みさせていただきます。ウォレットから引き出すことができます。システムの為替レートが一定時間帯の実際の為替レートによって調整して規定されます。手数料は取引金額の10％です。",
+    "The exchange rate varies based on real market rates in a certain period.": "システムの為替レートが一定時間帯の実際の為替レートによって調整して規定されます。",
+    "Transaction Records": "取引記録",
+    "Received": "受け取る",
+    "paid": "支払う",
+    "Total": "合計",
+    "xx of the total price is chareged as service fee.": "取引金額の{{value}}の手数料",
+    "Personal ID Verification Passed": "ID認証審査に合格",
     "Leave": "一時的に離れます",
     "Continue": "記入し続ける",
-    "You haven't Set Transaction Password. Go Set?":"あなたが取引パスワードを設定しませんでした,設置?",
-    "Please Install UE Lives APP to Enjoy All Functions":"完全な機能を利用できるために、UE Lives APP をダウンロードしてください",
-    "Contact Number":"連絡先",
-    "Enter Your Nickname":"ニックネームを入力してください",
-    "Enter Your Real Name":"本当の名前を入力してください",
-    "Enter the Industry in Which You are Working":"業界を入力してください",
-    "Select Your Region":"地域を選択してください",
-    "Enter Your Mobile No. or Email":"電話番号/メールアドレス入力"
+    "You haven't Set Transaction Password. Go Set?": "あなたが取引パスワードを設定しませんでした,設置?",
+    "Please Install UE Lives APP to Enjoy All Functions": "完全な機能を利用できるために、UE Lives APP をダウンロードしてください",
+    "Contact Number": "連絡先",
+    "Enter Your Nickname": "ニックネームを入力してください",
+    "Enter Your Real Name": "本当の名前を入力してください",
+    "Enter the Industry in Which You are Working": "業界を入力してください",
+    "Select Your Region": "地域を選択してください",
+    "Enter Your Mobile No. or Email": "電話番号/メールアドレス入力",
+    "Init. Pwd. 666666 for WeChat, Weibo, FB": "WeChat、Weibo、FB初期パスワード 666666"
 }
