--- a/www/languages/KR.json
+++ b/www/languages/KR.json
@@ -274,31 +274,32 @@
     "Information Authentication will be finish in two day": "인증 정보를 에 이틀 내에 완성할 수 있을 것이다",
     "Not Create,Back": "아니, 돌아 가기",
     "Create": "만들기",
-    "age":"나이",
-    "age":"전체 공개",
-    "Private":"나만 보기",
-    "Date of Birth":"생년월일",
-    "Please Set Transaction Password First":"먼저 거래비밀번호 설정",
-    "Based on Local Time":"任务时间以任务地点时间计算",
-    "Please Note:":"敬请注意：",
-    "After registering as a translator, you can accept tasks. Once a task is confirmed, the task owner would make a payment to us in advance. Three working days after the task is completed, the task fee will be exchanged into your local currency and transferred into your 'Wallet'. Money can be withdrawed from 'My Wallet' afterwards. Our platform charges 10% of the total fee as service fee. The exchange rate varies based on real market rates in a certain period.":"成为翻译后，您可以接受翻译任务。任务确认时，任务发布人需预付，相应款项由本平台代收；任务顺利完成后的三个工作日后，该款项会自动兑换为您当地的货币并转入您的钱包中。随后您可以从钱包余额中提现。平台收取任务总金额的10%作为手续费，系统汇率根据一段时间内的实际汇率厘定。",
-    "Registerring as a translator means that you accepted the arrangement above. Please obey the local law and regulation.":"成为翻译代表您已接受我们的以上安排，敬请遵守当地法律法规。",
-    "UE Lives provides an opportunity for your to leverage your language skills and meet new friends, and we are trying best to maintain a safe and reliable trading environment, which also relies on your support and participation.":"悠译希望为您创造增加收入和结识外国好友的机会，也努力为双方提供安全诚信的交易环境，这有赖于您的支持和参与。",
-    "The exchange rate varies based on real market rates in a certain period.":"The exchange rate varies based on real market rates in a certain period.",
-    "Transaction Records":"거래 기록",
-    "Received":"받다",
-    "paid":"지불하다",
-    "Total":"총액",
-    "xx of the total price is chareged as service fee.":"총 금액은 {{value}} 를 수수료",
-    "Personal ID Verification Passed":"실명인증승인",
+    "age": "나이",
+    "age": "전체 공개",
+    "Private": "나만 보기",
+    "Date of Birth": "생년월일",
+    "Please Set Transaction Password First": "먼저 거래비밀번호 설정",
+    "Based on Local Time": "任务时间以任务地点时间计算",
+    "Please Note:": "敬请注意：",
+    "After registering as a translator, you can accept tasks. Once a task is confirmed, the task owner would make a payment to us in advance. Three working days after the task is completed, the task fee will be exchanged into your local currency and transferred into your 'Wallet'. Money can be withdrawed from 'My Wallet' afterwards. Our platform charges 10% of the total fee as service fee. The exchange rate varies based on real market rates in a certain period.": "成为翻译后，您可以接受翻译任务。任务确认时，任务发布人需预付，相应款项由本平台代收；任务顺利完成后的三个工作日后，该款项会自动兑换为您当地的货币并转入您的钱包中。随后您可以从钱包余额中提现。平台收取任务总金额的10%作为手续费，系统汇率根据一段时间内的实际汇率厘定。",
+    "Registerring as a translator means that you accepted the arrangement above. Please obey the local law and regulation.": "成为翻译代表您已接受我们的以上安排，敬请遵守当地法律法规。",
+    "UE Lives provides an opportunity for your to leverage your language skills and meet new friends, and we are trying best to maintain a safe and reliable trading environment, which also relies on your support and participation.": "悠译希望为您创造增加收入和结识外国好友的机会，也努力为双方提供安全诚信的交易环境，这有赖于您的支持和参与。",
+    "The exchange rate varies based on real market rates in a certain period.": "The exchange rate varies based on real market rates in a certain period.",
+    "Transaction Records": "거래 기록",
+    "Received": "받다",
+    "paid": "지불하다",
+    "Total": "총액",
+    "xx of the total price is chareged as service fee.": "총 금액은 {{value}} 를 수수료",
+    "Personal ID Verification Passed": "실명인증승인",
     "Leave": "떠나다",
     "Continue": "계속 써",
-    "You haven't Set Transaction Password. Go Set?":"거래하신 비번이 비어있습니다.개선 하시겠습니까",
-    "Please Install UE Lives APP to Enjoy All Functions":"다운로드 UE Lives APP, 전체 기능 사용.",
-    "Contact Number":"연락처",
-    "Enter Your Nickname":"별명 입력하십시오.",
-    "Enter Your Real Name":"실제 이름을 입력하십시오.",
-    "Enter the Industry in Which You are Working":"니 업계 입력하십시오.",
-    "Select Your Region":"지역을 선택하세요",
-    "Enter Your Mobile No. or Email":"휴대폰 번호/이메일"
+    "You haven't Set Transaction Password. Go Set?": "거래하신 비번이 비어있습니다.개선 하시겠습니까",
+    "Please Install UE Lives APP to Enjoy All Functions": "다운로드 UE Lives APP, 전체 기능 사용.",
+    "Contact Number": "연락처",
+    "Enter Your Nickname": "별명 입력하십시오.",
+    "Enter Your Real Name": "실제 이름을 입력하십시오.",
+    "Enter the Industry in Which You are Working": "니 업계 입력하십시오.",
+    "Select Your Region": "지역을 선택하세요",
+    "Enter Your Mobile No. or Email": "휴대폰 번호/이메일",
+    "Init. Pwd. 666666 for WeChat, Weibo, FB": "WeChat, Weibo, FB 초기 암호 666666"
 }
