--- a/src/languages/JP.json
+++ b/src/languages/JP.json
@@ -26,22 +26,22 @@
     "Enter Password again": "確認のため、もう一度パスワードを入力",
     "Read the Privacy Policy": "利用規約/プライバシーポリシー",
     "Agree and Register": "同意して登録する",
-    "Create Task": "新しい案件を発注する",
-    "Task List": "案件リスト",
-    "Messages": "ニュースフィード",
-    "Rent Your Talent": "新しい案件を受注する",
-    "My Followings": "Myコレクション",
+    "Create Task": "新規",
+    "Task List": "リスト",
+    "Messages": "ニュース",
+    "Rent Your Talent": "ユーEになる（翻訳·通訳)",
+    "My Followings": "My フォロー",
     "My Wallet": "Myウォレット",
-    "Language": "言語",
+    "Language": "翻訳·通訳の言語",
     "Add Language": "新しい言語を追加",
-    "Type": "翻訳形式選択",
+    "Type": "翻訳内容（を選択）",
     "Add Type": "新しい形式を追加",
     "Personal Identity": "実名認証",
     "ID Verification": "ID認証",
     "Upload ID Card": "ID情報をアップロード",
     "Language Certificate": "語学レベル選択",
     "Upload Certificate": "語学資格を提示",
-    "Professional Qualification": "職業を選択",
+    "Professional Qualification": "職業選択",
     "Upload Qualification": "職業に関する資格を提示",
     "Membership": "メンバーシップ",
     "Join": "会員登録",
@@ -82,7 +82,7 @@
     "Place": "地域",
     "Popular Cities": "人気都市",
     "Price": "価格",
-    "Price": "形式",
+    "Price": "内容",
     "/hr.": "時間で計算",
     "/day": "日で計算",
     "Business": "ビジネス",
@@ -90,15 +90,15 @@
     "商务": "ビジネス",
     "旅行": "旅行",
     "其它": "その他",
-    "Task Details": "具体的な仕事内容",
+    "Task Details": "仕事内容",
     "Home": "ホーム",
     "Create Task": "新規",
     "Task List": "リスト",
     "UE": "UE",
     "Messages/chat": "チャット",
     "Select Language": "言語選択",
-    "Enter the Language to be Translated": "翻訳する元の言語を選択",
-    "Add Another Language": "新しい言語を追加する",
+    "Enter the Language to be Translated": "言語選択",
+    "Add Another Language": "言語選択",
     "Next": "次へ",
     "8 hrs./day, <=4hrs. count as 0.5 day": "一日を８時間として計算、４時間以下を半日と計算",
     "Title": "タイトル",
@@ -106,12 +106,12 @@
     "Business": "ビジネス",
     "Travel": "旅行",
     "Others": "その他",
-    "Price": "価格",
+    "Price": "日给",
     "Day": "一日",
     "Hr.": "一時間",
     "Place": "地域",
     "Title": "タイトル",
-    "Task Details": "仕事内容詳細",
+    "Task Details": "仕事内容",
     "Previous": "前へ戻る",
     "Confirm": "内容を確認",
     "Start Date": "開始日時",
@@ -165,7 +165,7 @@
     "PayPal": "Paypal",
     "Task has been accepted by xxx. Chat now!": "xxxがあなたのオファーを受注しました。今すぐチャットを始めましょう！",
     "Task has been accepted by xxx. Chat now!": "xxxがあなたのオファーを受注しました。今すぐチャットを始めましょう！",
-    "Push Messages": "新着通知",
+    "Push Messages": "通知",
     "Select Language": "言語切り替え",
     "Privacy Policy": "プライバシーポリシー",
     "Terms of Use": "利用規約",
@@ -189,8 +189,8 @@
     "Change Transaction Password": "パスワードを変更する",
     "Back": "後退",
     "Loading": "加載中",
-    "Load More": "より多くを見てください",
-    "No More": "ノーモア",
+    "Load More": "もっと見る",
+    "No More": "ここまで",
     "Setting": "設定",
     "Change Password": "パスワードの変更",
     "Enter Verification Code": "認証コードを入力",
@@ -213,9 +213,9 @@
     "Total Price": "総価格",
     "Read Privacy": "ユーザーの合意を読む",
     "Try Another": "記録はないが、別の1つをためしてください！",
-    "Please enter": "を記入してください",
-    "Please enter Title": "タイトルを記入してください",
-    "Please choose": "を選択してください",
+    "Please enter": "記入してください",
+    "Please enter Title": "タイトル場所してください",
+    "Please choose": "選択してください",
     "Withdraw Notice": "お引き出し通知",
     "Withdraw Money": "お引き出し金額",
     "Working Days": "作業日",
